// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`registry contract snapshots > exposes a stable relationship vocabulary 1`] = `
[
  {
    "kind": "contains",
    "label": "contains",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "attached_to",
    "label": "attached to",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "routes_to",
    "label": "routes to",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "connects_to",
    "label": "connects to",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "targets",
    "label": "targets",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "allows",
    "label": "allows",
    "style": "dashed",
    "symmetric": false,
  },
  {
    "kind": "depends_on",
    "label": "depends on",
    "style": "dashed",
    "symmetric": false,
  },
  {
    "kind": "invokes",
    "label": "invokes",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "publishes_to",
    "label": "publishes to",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "subscribes_to",
    "label": "subscribes to",
    "style": "solid",
    "symmetric": false,
  },
  {
    "kind": "reads_from",
    "label": "reads from",
    "style": "dashed",
    "symmetric": false,
  },
  {
    "kind": "writes_to",
    "label": "writes to",
    "style": "dashed",
    "symmetric": false,
  },
  {
    "kind": "assumes",
    "label": "assumes",
    "style": "dashed",
    "symmetric": false,
  },
  {
    "kind": "grants",
    "label": "grants",
    "style": "dashed",
    "symmetric": false,
  },
  {
    "kind": "monitors",
    "label": "monitors",
    "style": "dashed",
    "symmetric": false,
  },
  {
    "kind": "peers_with",
    "label": "peers with",
    "style": "solid",
    "symmetric": true,
  },
]
`;

exports[`registry contract snapshots > exposes a stable, complete sorted list of service ids 1`] = `
[
  "acm",
  "amazon-mq",
  "amplify",
  "api-gateway",
  "app-runner",
  "appsync",
  "athena",
  "aurora",
  "auto-scaling-group",
  "aws-backup",
  "aws-config",
  "batch",
  "bedrock",
  "cloudformation",
  "cloudfront",
  "cloudtrail",
  "cloudwatch",
  "cloudwatch-alarm",
  "cloudwatch-logs",
  "codebuild",
  "codecommit",
  "codedeploy",
  "codepipeline",
  "cognito",
  "comprehend",
  "control-tower",
  "cost-explorer",
  "documentdb",
  "dynamodb",
  "ebs-volume",
  "ec2-instance",
  "ecr",
  "ecs-cluster",
  "ecs-service",
  "efs",
  "eks-cluster",
  "elastic-beanstalk",
  "elastic-load-balancer",
  "elasticache",
  "emr",
  "eventbridge",
  "fargate",
  "fsx",
  "global-accelerator",
  "glue",
  "guardduty",
  "iam-group",
  "iam-identity-center",
  "iam-policy",
  "iam-role",
  "iam-user",
  "inspector",
  "internet-gateway",
  "kendra",
  "kinesis-data-streams",
  "kinesis-firehose",
  "kms",
  "lake-formation",
  "lambda",
  "lambda-edge",
  "lex",
  "lightsail",
  "memorydb",
  "msk",
  "nacl",
  "nat-gateway",
  "neptune",
  "opensearch",
  "organizations",
  "polly",
  "quicksight",
  "rds",
  "redshift",
  "rekognition",
  "route-table",
  "route53",
  "s3-bucket",
  "s3-glacier",
  "sagemaker",
  "secrets-manager",
  "security-group",
  "security-hub",
  "shield",
  "sns",
  "sqs",
  "step-functions",
  "storage-gateway",
  "subnet-private",
  "subnet-public",
  "systems-manager",
  "target-group",
  "textract",
  "transcribe",
  "transit-gateway",
  "translate",
  "trusted-advisor",
  "vpc",
  "vpc-endpoint",
  "vpc-peering",
  "waf",
  "x-ray",
]
`;

exports[`registry contract snapshots > groups a stable set of service ids under each category 1`] = `
{
  "ai-ml": [
    "bedrock",
    "comprehend",
    "kendra",
    "lex",
    "polly",
    "rekognition",
    "sagemaker",
    "textract",
    "transcribe",
    "translate",
  ],
  "analytics": [
    "athena",
    "emr",
    "glue",
    "kinesis-firehose",
    "lake-formation",
    "msk",
    "opensearch",
    "quicksight",
    "redshift",
  ],
  "compute": [
    "auto-scaling-group",
    "batch",
    "ec2-instance",
    "elastic-beanstalk",
    "lambda",
    "lightsail",
  ],
  "containers": [
    "app-runner",
    "ecr",
    "ecs-cluster",
    "ecs-service",
    "eks-cluster",
    "fargate",
  ],
  "database": [
    "aurora",
    "documentdb",
    "dynamodb",
    "elasticache",
    "memorydb",
    "neptune",
    "rds",
  ],
  "deployment": [
    "amplify",
    "cloudformation",
    "codebuild",
    "codecommit",
    "codedeploy",
    "codepipeline",
  ],
  "edge": [
    "cloudfront",
    "global-accelerator",
    "lambda-edge",
  ],
  "identity": [
    "iam-group",
    "iam-identity-center",
    "iam-policy",
    "iam-role",
    "iam-user",
  ],
  "integration": [
    "amazon-mq",
    "api-gateway",
    "appsync",
    "eventbridge",
    "kinesis-data-streams",
    "sns",
    "sqs",
    "step-functions",
  ],
  "management": [
    "aws-config",
    "control-tower",
    "cost-explorer",
    "organizations",
    "systems-manager",
    "trusted-advisor",
  ],
  "monitoring": [
    "cloudtrail",
    "cloudwatch",
    "cloudwatch-alarm",
    "cloudwatch-logs",
    "x-ray",
  ],
  "networking": [
    "elastic-load-balancer",
    "internet-gateway",
    "nacl",
    "nat-gateway",
    "route-table",
    "route53",
    "security-group",
    "subnet-private",
    "subnet-public",
    "target-group",
    "transit-gateway",
    "vpc",
    "vpc-endpoint",
    "vpc-peering",
  ],
  "security": [
    "acm",
    "cognito",
    "guardduty",
    "inspector",
    "kms",
    "secrets-manager",
    "security-hub",
    "shield",
    "waf",
  ],
  "storage": [
    "aws-backup",
    "ebs-volume",
    "efs",
    "fsx",
    "s3-bucket",
    "s3-glacier",
    "storage-gateway",
  ],
}
`;
